<resources>
    <string name="app_name">Leshukov_b2_v4</string>
    <string name="calculator">Геометрический калькулятор</string>
    <string name="hint1">Введите логин</string>
    <string name="hint2">Введите пароль</string>
    <string name="reg">Регистрация</string>
    <string name="choose">Выбор фигуры</string>
    <string name="choose2">Выберите фигуру</string>
    <string name="input">Введите данные для расчета</string>
    <string name="vipoln">Выполнить расчет</string>
    <string name="rez">Результат вычисления</string>
    <string name="name">Название выбранной фигуры</string>
    <string name="rez2">РЕЗУЛЬТАТ</string>
</resources>