<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_centerHorizontal="true"
        android:text="@string/calculator"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/white"

        />
    <ImageView
        android:layout_width="170dp"
        android:layout_height="153dp"
        android:src="@drawable/figure1"
        android:layout_marginTop="70dp"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rez"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="283dp"
        android:layout_marginLeft="26sp"
        android:textColor="@color/white"
        />

    <FrameLayout
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:background="@drawable/rectangle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="335dp"


        />
    <EditText
        android:id="@+id/result_name"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/black"
        android:textColorHint="@color/grey"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:hint="@string/name"
        android:layout_marginTop="335dp"
        android:layout_centerHorizontal="true"

        />
    <FrameLayout
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:background="@drawable/rectangle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="420dp"


        />
    <EditText
        android:id="@+id/result_value"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/black"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:hint="@string/rez2"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_marginTop="420dp"
        android:layout_centerHorizontal="true"

        />


    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="380dp"
        android:layout_height="60dp"
        android:background="@drawable/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="530dp"
        android:text="@string/reg"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        android:onClick="goFirst"
        android:textAllCaps="false"
        />


</RelativeLayout>