<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/blue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose"

        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:textColor="@color/white"
        />
    <ImageView
        android:id="@+id/figure_image"
        android:layout_width="480dp"
        android:layout_height="285dp"
        android:src="@drawable/choose1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="73dp"

        />

    <FrameLayout
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:background="@drawable/rectangle2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="365dp"


        />
    <Spinner
        android:id="@+id/sp"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="367dp"
        android:backgroundTint="@color/black"




    />

    <FrameLayout
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:background="@drawable/rectangle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="430dp"


        />
    <EditText
        android:id="@+id/dann"
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:backgroundTint="@color/black"
        android:textColorHint="@color/grey"
        android:textColor="@color/black"
        android:hint="@string/input"
        android:textSize="18dp"
        android:layout_marginTop="432dp"
        android:layout_centerHorizontal="true"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:onClick="calculate"
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:background="@drawable/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="520dp"
        android:text="@string/vipoln"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"

        android:textAllCaps="false"
        />
</RelativeLayout>